--- a/common/pom.xml
+++ b/common/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>rdf4j-model</artifactId>
             <version>3.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
